# finance_app_oai_agent_builder

./: .gitignore  AGENT_SETUP.md  DEPLOYMENT.md  GETTING_STARTED.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  UV_GUIDE.md  config.py  dev.sh  main.py  pyproject.toml  readme.md  requirements.txt  run.py  setup.sh  vercel.json
static/: index.html
tools/: __init__.py  code_interpreter.py  knowledge_base.py  web_search.py
